k8s/misc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-shop-ingress
  namespace: mini-shop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: mini-shop.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mini-shop-service
            port:
              number: 80
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: mini-shop-service
            port:
              number: 9000
